--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "less": "^4.1.1",
+    "parcel": "^2.0.0-beta.2",
     "tsc": "^2.0.3",
     "typescript": "^4.2.4",
     "webpack": "^5.37.1"
+  },
+  "devDependencies": {
+    "@parcel/transformer-less": "^2.0.0-beta.2",
+    "webpack-cli": "^4.7.0"
   }
 }
